Styling the interface

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
       <script defer src="js/objectbapp.js"></script>
   </head> 
   <body> 
-       
+      <div class="container hide-on-small-only">
+        <!-- MENSAJE QUE SOLO SE MUESTRA EN TABLETS Y DESKTOP -->
+      </div>
+       <div class="container hide-on-med-and-up">
+        <div class="row">
+          
+        </div>
+       </div>
   </body>
 </html>
