Still building interface

--- a/index.html
+++ b/index.html
@@ -27,8 +27,25 @@
       <div class="container hide-on-small-only">
         <!-- MENSAJE QUE SOLO SE MUESTRA EN TABLETS Y DESKTOP -->
       </div>
-       <div class="container hide-on-med-and-up">
+       <div class="container hide-on-med-and-up vertical-spaces">
         <div class="row">
+            <div class="col s1"><i class="material-icons small">settings</i></div>
+            <div class="col s10 center grey-text">
+              <p class="card-title">BilleterApp</p>
+              <span class="center"><h1>$ 12.345,00</h1></span>
+            </div>
+            <div class="col s1"><i class="material-icons">person</i></div>
+        </div>
+        <div class="center">
+          <table>
+            <tbody>
+              <tr>
+                <td><button class="btn-floating btn-large waves-effect waves-light blue-grey z-depth-2"><i class="material-icons">camera</i></button></td>
+                <td><button class="btn-floating btn-large waves-effect waves-light blue-grey z-depth-2"><i class="material-icons">center_focus_strong</i></button></td>
+                <td><button class="btn-floating btn-large waves-effect waves-light blue-grey z-depth-2"><i class="material-icons">center_focus_strong</i></button></td>
+              </tr>
+            </tbody>
+          </table>
           
         </div>
        </div>
