--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
         <div class="center">
           <table>
             <tbody>
-              <tr>
+              <tr class="center-align">
                 <td><button class="btn-floating btn-large waves-effect waves-light blue-grey z-depth-2"><i class="material-icons">camera</i></button></td>
                 <td><button class="btn-floating btn-large waves-effect waves-light blue-grey z-depth-2"><i class="material-icons">center_focus_strong</i></button></td>
-                <td><button class="btn-floating btn-large waves-effect waves-light blue-grey z-depth-2"><i class="material-icons">center_focus_strong</i></button></td>
+                <td><button class="btn-floating btn-large waves-effect waves-light blue-grey z-depth-2"><i class="material-icons">list</i></button></td>
               </tr>
+              <tr></tr>
             </tbody>
           </table>
           
