--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               </tr>
             </tbody>
           </table>
-          <div class="table-margins">
+          <div class="table-margins" style="scroll-behavior: smooth;">
             <table class="striped">
               <thead class="blue-grey white-grey-2">
                 <tr>
