adjusting movements table

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div class="container hide-on-small-only">
         <!-- MENSAJE QUE SOLO SE MUESTRA EN TABLETS Y DESKTOP -->
       </div>
-       <div class="container hide-on-med-and-up vertical-spaces ">
-        <div class="row">
+       <div class="container hide-on-med-and-up vertical-spaces">
+        <div class="row" style="position: relative;">
             <div class="col s1"><i class="material-icons small">settings</i></div>
             <div class="col s10 center grey-text">
               <p class="card-title">BilleterApp</p>
@@ -36,7 +36,7 @@
             </div>
             <div class="col s1"><i class="material-icons">person</i></div>
         </div>
-        <div class="center">
+        <div class="center" style="position:sticky;">
           <table class="border-none">
             <tbody>
               <tr class="border-none">
@@ -51,7 +51,7 @@
               </tr>
             </tbody>
           </table>
-          <div class="table-margins" style="scroll-behavior: smooth;">
+          <div class="inner outer">
             <table class="striped">
               <thead class="blue-grey white-grey-2">
                 <tr>
