--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="container hide-on-small-only">
         <!-- MENSAJE QUE SOLO SE MUESTRA EN TABLETS Y DESKTOP -->
       </div>
-       <div class="container hide-on-med-and-up vertical-spaces">
+      <div class="container hide-on-med-and-up vertical-spaces" style="position: static;">
         <div class="row" style="position: relative;">
             <div class="col s1"><i class="material-icons small">settings</i></div>
             <div class="col s10 center grey-text">
@@ -36,7 +36,7 @@
             </div>
             <div class="col s1"><i class="material-icons">person</i></div>
         </div>
-        <div class="center" style="position:sticky;">
+        <div class="center">
           <table class="border-none">
             <tbody>
               <tr class="border-none">
@@ -51,70 +51,70 @@
               </tr>
             </tbody>
           </table>
-          <div class="inner outer">
-            <table class="striped">
-              <thead class="blue-grey white-grey-2">
-                <tr>
-                  <th>Fecha</th>
-                  <th>Movimiento</th>
-                  <th class="right">Importe</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>01-05</td>
-                  <td>Compra Carnicería</td>
-                  <td class="right">$ 3810,00</td>
-                </tr>
-                <tr>
-                  <td>01-05</td>
-                  <td>Compra Carnicería</td>
-                  <td class="right">$ 3810,00</td>
-                </tr>
-                <tr>
-                  <td>01-05</td>
-                  <td>Compra Carnicería</td>
-                  <td class="right">$ 3810,00</td>
-                </tr>
-                <tr>
-                  <td>01-05</td>
-                  <td>Compra Carnicería</td>
-                  <td class="right">$ 3810,00</td>
-                </tr>
-                <tr>
-                  <td>01-05</td>
-                  <td>Compra Carnicería</td>
-                  <td class="right">$ 3810,00</td>
-                </tr>
-                <tr>
-                  <td>01-05</td>
-                  <td>Compra Carnicería</td>
-                  <td class="right">$ 3810,00</td>
-                </tr>
-                <tr>
-                  <td>01-05</td>
-                  <td>Compra Carnicería</td>
-                  <td class="right">$ 3810,00</td>
-                </tr>
-                <tr>
-                  <td>01-05</td>
-                  <td>Compra Carnicería</td>
-                  <td class="right">$ 3810,00</td>
-                </tr>
-                <tr>
-                  <td>01-05</td>
-                  <td>Compra Carnicería</td>
-                  <td class="right">$ 3810,00</td>
-                </tr>
-                <tr>
-                  <td>01-05</td>
-                  <td>Compra Carnicería</td>
-                  <td class="right">$ 3810,00</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
         </div>
-       </div>
+      </div>
+      <div>
+        <table class="striped">
+          <thead class="blue-grey white-grey-2">
+            <tr>
+              <th>Fecha</th>
+              <th>Movimiento</th>
+              <th class="right">Importe</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>01-05</td>
+              <td>Compra Carnicería</td>
+              <td class="right">$ 3810,00</td>
+            </tr>
+            <tr>
+              <td>01-05</td>
+              <td>Compra Carnicería</td>
+              <td class="right">$ 3810,00</td>
+            </tr>
+            <tr>
+              <td>01-05</td>
+              <td>Compra Carnicería</td>
+              <td class="right">$ 3810,00</td>
+            </tr>
+            <tr>
+              <td>01-05</td>
+              <td>Compra Carnicería</td>
+              <td class="right">$ 3810,00</td>
+            </tr>
+            <tr>
+              <td>01-05</td>
+              <td>Compra Carnicería</td>
+              <td class="right">$ 3810,00</td>
+            </tr>
+            <tr>
+              <td>01-05</td>
+              <td>Compra Carnicería</td>
+              <td class="right">$ 3810,00</td>
+            </tr>
+            <tr>
+              <td>01-05</td>
+              <td>Compra Carnicería</td>
+              <td class="right">$ 3810,00</td>
+            </tr>
+            <tr>
+              <td>01-05</td>
+              <td>Compra Carnicería</td>
+              <td class="right">$ 3810,00</td>
+            </tr>
+            <tr>
+              <td>01-05</td>
+              <td>Compra Carnicería</td>
+              <td class="right">$ 3810,00</td>
+            </tr>
+            <tr>
+              <td>01-05</td>
+              <td>Compra Carnicería</td>
+              <td class="right">$ 3810,00</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
   </body>
 </html>
